# CS2-Calculator-BaraaBenMansour

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  test.cpp
